--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="size">43</div>
         <div class="size">44</div>
     </div>
-    <button class="productButoon">BUY NOW!</button>
+    <button class="productButton">BUY NOW!</button>
 </div>
 </div>
   </body>
